--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ html {
     position: fixed;
     padding:  0 0 0 0;
     height: 100vh;
-    width: 50%;
+    width: 60%;
     text-align: center;
     transform: translatex(-110%);
     transition: all .6s ease-in-out;
@@ -58,8 +58,9 @@ html {
 }
 ul{
     margin: 0;
-    left: 1%;
+    left: 0%;
     top: 10%;
+    padding-left: 5%;
     font-weight: 700;
     list-style: none;
     position: absolute;
@@ -72,7 +73,7 @@ ul{
     text-align: left;
 }
 li{
-    padding: 0 0 30% 0;
+    padding: 0 0 20% 0;
 }
 .sidenav-close-icon{
     color: black;  
@@ -113,7 +114,7 @@ li{
 }
 .section-1{
     grid-area: section-1;
-    height: 100vh;
+    height: 90vh;
     width: 100%;
     /* background-image: url("https://images.pexels.com/photos/1212806/pexels-photo-1212806.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"); */
     background-image: url("https://images.pexels.com/photos/1235706/pexels-photo-1235706.jpeg?auto=compress&cs=tinysrgb&h=650&w=940");
@@ -483,3 +484,14 @@ li{
         padding: 10% 0 0 0;
     }
 } 
+
+@media only screen and (min-device-width: 320px)
+                   and (max-device-width: 600px)
+                   and (orientation: landscape) {
+    li{
+        padding: 0 0 6% 0;
+    }
+    ul{
+        top: 7%;
+    }
+}
