--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ li{
     height: 90vh;
     width: 100%;
     /* background-image: url("https://images.pexels.com/photos/1212806/pexels-photo-1212806.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"); */
-    background-image: url("https://images.pexels.com/photos/1235706/pexels-photo-1235706.jpeg?auto=compress&cs=tinysrgb&h=650&w=940");
+    background-image: url("https://images.pexels.com/photos/2998480/pexels-photo-2998480.jpeg?cs=srgb&dl=coffee-poured-in-white-cup-2998480.jpg&fm=jpg");
     background-position: 7% 100%;
     background-size: 100% 100%;
     /* background-size: cover; */
