--- a/style.css
+++ b/style.css
@@ -56,25 +56,24 @@ html {
     transition: all .6s ease-in-out;
     z-index: 2;
 }
-ul{
+.menu-list{
     margin: 0;
     left: 0%;
     top: 10%;
-    padding-left: 5%;
+    padding: 0 0 10% 5%;
     font-weight: 700;
     list-style: none;
-    position: absolute;
+    position: relative;
     display: flex;
     flex-direction: column;
     color: black;
     font-family: "roboto", sans-serif;
+    text-decoration: none;
     text-transform: uppercase;
     font-size: 2em;
     text-align: left;
 }
-li{
-    padding: 0 0 20% 0;
-}
+
 .sidenav-close-icon{
     color: black;  
     position: absolute;
@@ -226,7 +225,10 @@ li{
     height: 350px;
     position: relative;
 }
-
+.links{
+    color: white;
+    text-decoration: none;
+}
 .breakfast-dessert{
     height: 350px;
     width: 100%;
@@ -395,6 +397,17 @@ li{
             "section-12 section-12";
             height: 100%;
     }
+    .sidenav{
+        background: white;
+        position: fixed;
+        padding:  0 0 0 5%;
+        height: 100vh;
+        width: 40%;
+        text-align: center;
+        transform: translatex(-110%);
+        transition: all .6s ease-in-out;
+        z-index: 2;
+    }
     .section-1{
         grid-area: section-1;
         height: 95vh;
@@ -407,15 +420,6 @@ li{
         background-size: 100% 100%;
     }
 
-    /* .pancakes{
-        <img src="waffles.jpg" class="pancakes" alt="">
-        background: url
-        height: 100%;
-        width: 100%;
-        z-index: -1;
-        background-position: center;
-        background-size: cover;
-    } */
     .section-12{
         grid-area: section-12;
         height: 100px;
@@ -458,7 +462,6 @@ li{
         width: 100%;
         top: 0;
         z-index: -1;
-        opacity: .8;
     }
     .menu-icon{
         color: white;
@@ -487,12 +490,24 @@ li{
 @media only screen and (min-device-width: 320px)
                    and (max-device-width: 600px)
                    and (orientation: landscape) {
-    li{
-        padding: 0 0 6% 0;
+    .menu-list{
+        margin: 0;
+        left: 0%;
+        top: 10%;
+        padding: 0 0 4% 5%;
+        font-weight: 700;
+        list-style: none;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        color: black;
+        font-family: "roboto", sans-serif;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-size: 2em;
+        text-align: left;
     }
-    ul{
-        top: 7%;
-    }
+
 }
 
 @media screen and (max-width: 400px) {
